# TRPcode

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  Computation.cpp  Query.cpp  README.md  test.sh
include/: CCRTree.h  bigraph.h  compact.h  graph.h  partition.h  utils.h
include/basebfs/: bfs.h
include/grail/: Grail.h  GraphUtil.h  TCSEstimator.h  exception_list.h  exception_list_incremental_base.h  exception_list_incremental_plus.h  interval_tree.h  templatestack.h  time_tracker.h
include/pathtree/: DWGraph.h  DWGraphUtil.h  DataComp.h  GraphUtil.h  PathTree.h
query/: query_generator.py
results/: json-wikiquote_pl_64.json
src/: compact.cpp  graph.cpp  partition.cpp  utils.cpp
src/basebfs/: bfs.cpp
src/grail/: GraphUtil.cpp  TCSEstimator.cpp  grail.cpp  interval_tree.cpp
src/pathtree/: DWGraph.cpp  DWGraphUtil.cpp  DataComp.cpp  GraphUtil.cpp  PathTree.cpp  main.cpp
third/O-Reach/app/: parse_reachability_parameters.h  reachability.cpp
third/O-Reach/lib/algorithms/: bfs.cpp
third/O-Reach/lib/reachability/: oreach.h
tool/: CMakeLists.txt  tools.cc
